--- a/confluent-sigma/sigma-streams-ui/src/main/resources/static/sigma_rules.html
+++ b/confluent-sigma/sigma-streams-ui/src/main/resources/static/sigma_rules.html
@@ -88,8 +88,8 @@
 
 <!-- <script src="js/ace-builds/src-noconflict/ace.js" type="text/javascript" charset="utf-8"></script> -->
 <script type="text/javascript" src="js/yaml.js"></script>
-<script src="http://ajaxorg.github.io/ace-builds/src/ace.js" type="text/javascript" charset="utf-8"></script>
-<script src="http://ajaxorg.github.io/ace-builds/src/ext-modelist.js" type="text/javascript" charset="utf-8"></script>
+<script src="https://ajaxorg.github.io/ace-builds/src/ace.js" type="text/javascript" charset="utf-8"></script>
+<script src="https://ajaxorg.github.io/ace-builds/src/ext-modelist.js" type="text/javascript" charset="utf-8"></script>
 <script>
     var editor = ace.edit("editor", {
         theme: "ace/theme/monokai",
